# CS-558

./: README.md  hough.py  hough_reference.py  pyproject.toml  ransac.ipynb  ransac.pkl  ransac.py  test.ipynb  test.py
hw1/: pyproject.toml  run.py  run.sh  test.ipynb
hw1/report/: main.typ  template.typ
hw1/result/: edge_kangaroo_sigma=3.0_size=19_threshold=30.0.pgm  edge_plane_5.0_31_20.0.pgm  edge_plane_5.0_31_21.0.pgm  edge_plane_5.0_31_21.5.pgm  edge_plane_5.0_31_22.5.pgm  edge_plane_sigma=3.0_size=19_threshold=35.0.pgm  edge_red_sigma=2.0_size=13_threshold=22.0.pgm  gaussian_kangaroo_sigma=2.0_filtered_size=13.pgm  gaussian_plane_sigma=1.0_filtered_size=7.pgm  gaussian_plane_sigma=3.0_filtered_size=19.pgm  gaussian_red_sigma=1.0_filtered_size=7.pgm  gaussian_red_sigma=2.0_filtered_size=13.pgm  kangaroo_gaussian_1.0_7.pgm  sobel_magnitude_kangaroo_sigma=2.0_size=13_threshold=22.5.pgm  sobel_magnitude_plane_sigma=3.0_size=19_threshold=22.0.pgm  sobel_magnitude_red_sigma=2.0_size=13_threshold=22.0.pgm  sobel_magnitude_x_20.0_kangaroo_gaussian_1.0_7.pgm  sobel_magnitude_x_50.0_kangaroo_gaussian_1.0_7.pgm  sobel_magnitude_x_70.0_kangaroo_gaussian_1.0_7.pgm  sobel_magnitude_x_75.0_kangaroo_gaussian_1.0_7.pgm  sobel_magnitude_x_90.0_kangaroo_gaussian_1.0_7.pgm  sobel_magnitude_x_kangaroo_gaussian_1.0_7.pgm  sobel_x_kangaroo_gaussian_1.0_7.pgm  sobel_y_kangaroo_gaussian_1.0_7.pgm
hw2/: run.py  run.sh
hw2/CS 558 - HW2/: algo.typ  main.typ  (+1 more)
hw3/: open_cv.py  opencv.py  run.py  run.sh
hw3_attempts/: hw3.ipynb  hw3.py
hw4/: run.py  run.sh
test/: test.ipynb
(+20 files in other folders)
